get user info by token
